# passcli

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/commands/: add.rs  copy.rs  encrypt.rs  list.rs  open.rs  remove.rs  status.rs  update.rs
core/: Cargo.toml
core/src/: lib.rs  models.rs  storage.rs
core/src/utils/: choose_service_from_list.rs  is_vault_encrypted.rs  mod.rs  save_password.rs
gui/: Cargo.toml  app.vue  nuxt.config.ts  package-lock.json  package.json
gui/assets/css/: global.css
gui/components/: AddAccountForm.vue  ServiceDetail.vue  ServiceList.vue
gui/composables/: useFavorites.ts  useVault.ts
gui/pages/: index.vue
gui/src/: main.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
src/: cli.rs  crypto.rs  main.rs  models.rs  storage.rs
src/commands/: add.rs  copy.rs  encrypt.rs  list.rs  mod.rs  open.rs  remove.rs  status.rs  update.rs
src/utils/: choose_service_from_list.rs  copy_to_clipboard.rs  generate_password.rs  mod.rs  save_password.rs
