[package]
name = "passcli-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
aes-gcm = "0.10"
base64 = "0.22.1"
aes = "0.8"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
rand = "0.9.1"
arboard = "3.3"
dialoguer = "0.11"
rpassword = "7.4"
