[package]
name = "passcli-gui"
version = "0.1.0"
edition = "2024"

[lib]
name = "passcli_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
passcli-core = { path = "../../core" }
